Reverted one more CSS change and added ipynb files as well as shot data from this season

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -352,6 +352,10 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
+  .card-container {
+    flex-direction: column;
+  }
+
   .filter-container {
     display: block;
     margin-bottom: 20px;
