--- a/src/app/pagenotfound/pagenotfound.component.html
+++ b/src/app/pagenotfound/pagenotfound.component.html
@@ -1,11 +1,8 @@
 <nav-bar></nav-bar>
 <div class="error-container">
+
   <h1 class="error-title">
-    <h1 class="error-title">
-      Oops! It seems like there is an incorrect player ID, the player did not
-      play this season, there were no games on this day, or the URL is
-      incorrect. I probably should be more specific but I am lazy asf.
-    </h1>
+        Oops! Page not found. Please go back and try something else. Thank you!
   </h1>
-  <img src="assets/henriquee.jpg" alt="Error Image" class="error-image" />
+  <img src="assets/spidergritty.jpg" alt="Error Image" class="error-image" />
 </div>
