--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -48,9 +48,11 @@
       <ng-container matColumnDef="team">
         <th mat-header-cell *matHeaderCellDef>Team</th>
         <td mat-cell *matCellDef="let player">
+            <a [routerLink]="['/teams', player.teamId]">
           <img src="{{ 'assets/' + player.team + '.png' }}" class="logo" />{{
             player.team
           }}
+            </a>
         </td>
       </ng-container>
       <ng-container matColumnDef="goals">
