--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -35,7 +35,7 @@
                 <p><strong>Birth Date:</strong> {{ player.birthDate }}</p>
                 <p><strong>Position:</strong> {{ player.position }}</p>
                 <p><strong>Handedness:</strong> {{ player.handedness }}</p>
-                <p><strong>Height:</strong> {{ player.height }}</p>
+                <p><strong>Height:</strong> {{ height }}</p> 
                 <p><strong>Weight:</strong> {{ player.weight }}</p>
                 <p>
                   <strong>Nationality:</strong>
