--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -1,8 +1,12 @@
 <nav-bar [navColor]="navColor"></nav-bar>
-
+<body [ngStyle]="{ 'background-color': secondaryColor }">
 <div class="container">
   <div class="center">
-    <ng-container *ngIf="{ team: team$ | async } as data">
+    <ng-container
+    *ngIf="{ team: team$ | async,
+             standings: standings$ | async,
+             roster: roster$ | async,
+    } as data">
       <div class="row">
         <div class="card-container">
           <mat-card class="team-card border">
@@ -30,13 +34,36 @@
               </mat-card-subtitle>
             </mat-card-content>
           </mat-card>
-          <mat-card class="team-card border" [style.background-color]="secondaryColor + ' !important'">
+          <mat-card class="team-card border">
             <mat-card-content style="margin-top: 3px">
-              <img
-                src="{{ 'assets/' + data.team?.teamName + '1.png' }}"
-                alt="{{ data.team?.teamName }} Logo"
-                class="team-logo"
-              />
+                <ng-container *ngIf="forwards">
+                    <mat-card-title class="position-name">
+                      Forwards ({{ forwards.length }})
+                    </mat-card-title>
+                    <ng-container *ngFor="let forward of forwards">
+                      #{{ forward.sweaterNumber}} {{ forward.fullName }} - {{ forward.positionCode }}
+                      <br/>
+                    </ng-container>
+                  </ng-container>
+                <ng-container *ngIf="defense">
+                    <mat-card-title class="position-name">
+                      Defense ({{ defense.length }})
+                    </mat-card-title>
+                    <ng-container *ngFor="let defenseman of defense">
+                        <!-- I don't think I like this -->
+                        #{{ defenseman.sweaterNumber}} {{ defenseman.fullName }} - {{ defenseman.shootsCatches }}{{ defenseman.positionCode }}
+                        <br/>
+                    </ng-container>
+                  </ng-container>
+                <ng-container *ngIf="goalies">
+                  <mat-card-title class="position-name">
+                    Goalies ({{ goalies.length }})
+                  </mat-card-title>
+                  <ng-container *ngFor="let goalie of goalies">
+                    #{{ goalie.sweaterNumber}} {{ goalie.fullName }} - {{ goalie.shootsCatches }}
+                    <br/>
+                  </ng-container>
+                </ng-container>
             </mat-card-content>
           </mat-card>
         </div>
@@ -44,3 +71,4 @@
     </ng-container>
   </div>
 </div>
+</body>
