--- a/src/app/standings/standings.component.html
+++ b/src/app/standings/standings.component.html
@@ -1,5 +1,5 @@
 <nav-bar></nav-bar>
-<div style="text-align: center"><p>Updated every Sunday</p></div>
+<div class="last-updated"><p>Last Updated: {{ lastUpdated }} EST</p></div>
 <div class="standings-container">
   <mat-card class="division-card score-card" *ngFor="let division of divisions">
     <mat-card-header>
@@ -14,17 +14,19 @@
             <th>Simulated Points</th>
           </tr>
           <tr *ngFor="let team of groupByDivision(division)">
+            <a [routerLink]="['/teams', team.teamId]">
             <td>
               <img
-                src="{{ 'assets/' + team.Team + '.png' }}"
-                alt="{{ team.Team }} Logo"
+                src="{{ 'assets/' + team.teamName + '.png' }}"
+                alt="{{ team.teamName }} Logo"
                 class="team-logo"
               />
             </td>
-            <td [ngStyle]="getActualPointsStyle(team['Actual Points'])">
-              {{ team["Actual Points"] | number : "1.0-0" }}
+            </a>
+            <td [ngStyle]="getActualPointsStyle(team.actualPoints)">
+              {{ team.actualPoints | number : "1.0-0" }}
             </td>
-            <td>{{ team["Simulated Points"] | number : "1.1-2" }}</td>
+            <td>{{ team.simulatedPoints | number : "1.1-2" }}</td>
           </tr>
         </table>
       </div>
