--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -25,17 +25,21 @@
                 </div>
                 <p>
                   <strong>Team: </strong>
-                  <a [routerLink]="['/teams', player.teamId]">{{ player.team }}
+                  <a
+                    [routerLink]="['/teams', player.teamId]"
+                    class="plain-link"
+                  >
+                    {{ player.team }}
                     <img
-                    src="{{ 'assets/' + player.team + '.png' }}"
-                    class="logo"
-                  />
+                      src="{{ 'assets/' + player.team + '.png' }}"
+                      class="logo"
+                    />
                   </a>
                 </p>
                 <p><strong>Birth Date:</strong> {{ player.birthDate }}</p>
                 <p><strong>Position:</strong> {{ player.position }}</p>
                 <p><strong>Handedness:</strong> {{ player.handedness }}</p>
-                <p><strong>Height:</strong> {{ height }}</p> 
+                <p><strong>Height:</strong> {{ height }}</p>
                 <p><strong>Weight:</strong> {{ player.weight }}</p>
                 <p>
                   <strong>Nationality:</strong>
