--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -36,23 +36,17 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="position">
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-          class="small-column"
-        >
-          Position
-        </th>
+        <th mat-header-cell *matHeaderCellDef class="small-column">Position</th>
         <td mat-cell *matCellDef="let player">{{ player.position }}</td>
       </ng-container>
       <ng-container matColumnDef="team">
         <th mat-header-cell *matHeaderCellDef>Team</th>
         <td mat-cell *matCellDef="let player">
-            <a [routerLink]="['/teams', player.teamId]">
-          <img src="{{ 'assets/' + player.team + '.png' }}" class="logo" />{{
-            player.team
-          }}
-            </a>
+          <a [routerLink]="['/teams', player.teamId]" class="plain-link">
+            <img src="{{ 'assets/' + player.team + '.png' }}" class="logo" />{{
+              player.team
+            }}
+          </a>
         </td>
       </ng-container>
       <ng-container matColumnDef="goals">
