--- a/src/app/teams/teams.component.scss
+++ b/src/app/teams/teams.component.scss
@@ -17,7 +17,15 @@ td {
   text-align: center;
 }
 
-body { background-color: #DBF9FC; }
+body {
+  background-color: #dbf9fc;
+}
+
+.plain-link {
+  color: inherit; /* Inherit the color from the parent */
+  text-decoration: none; /* Remove underline */
+  cursor: pointer; /* Show pointer cursor on hover */
+}
 
 .team-name {
   font-size: 30px;
@@ -27,10 +35,10 @@ body { background-color: #DBF9FC; }
 }
 
 .position-name {
-    font-size: 20px;
-    margin: 4px 0;
-    text-align: center;
-  }
+  font-size: 20px;
+  margin: 4px 0;
+  text-align: center;
+}
 
 .divide-line {
   border: 1px solid #a7a5a5;
