--- a/src/app/standings/standings.component.html
+++ b/src/app/standings/standings.component.html
@@ -1,4 +1,5 @@
 <nav-bar></nav-bar>
+<h1 class ="standings-header"> Standings </h1>
 <div class="last-updated"><p>Last Updated: {{ lastUpdated }} EST</p></div>
 <div class="standings-container">
   <mat-card class="division-card score-card" *ngFor="let division of divisions">
