--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -36,58 +36,69 @@
             </mat-card>
             <mat-card class="team-card border">
               <mat-card-content style="margin-top: 3px">
-                <ng-container *ngIf="forwards">
-                  <mat-card-title class="position-name">
-                    Forwards ({{ forwards.length }})
-                  </mat-card-title>
-                  <ng-container *ngFor="let forward of forwards">
-                    <a
-                      [routerLink]="['/', forward.playerId, 'year', '2024']"
-                      class="plain-link"
-                    >
-                      #{{ forward.sweaterNumber }} {{ forward.fullName }} -
-                      {{ forward.positionCode }}
-                    </a>
-                    <br />
-                  </ng-container>
-                </ng-container>
-                <ng-container *ngIf="defense">
-                  <mat-card-title class="position-name">
-                    Defense ({{ defense.length }})
-                  </mat-card-title>
-                  <ng-container *ngFor="let defenseman of defense">
-                    <!-- I don't think I like the position being hand + D -->
-                    <!-- Also, I thought that player pages without a year should default to current. -->
-                    <a
-                      [routerLink]="['/', defenseman.playerId, 'year', 2024]"
-                      class="plain-link"
-                    >
-                      #{{ defenseman.sweaterNumber }}
-                      {{ defenseman.fullName }} - {{ defenseman.shootsCatches
-                      }}{{ defenseman.positionCode }}
-                    </a>
-                    <br />
-                  </ng-container>
-                </ng-container>
-                <ng-container *ngIf="goalies">
-                  <mat-card-title class="position-name">
-                    Goalies ({{ goalies.length }})
-                  </mat-card-title>
-                  <ng-container *ngFor="let goalie of goalies">
-                    <a
-                      [routerLink]="['/', goalie.playerId, 'year', 2024]"
-                      class="plain-link"
-                    >
-                      #{{ goalie.sweaterNumber }} {{ goalie.fullName }} -
-                      {{ goalie.shootsCatches }}
-                    </a>
-                    <br />
-                  </ng-container>
-                </ng-container>
+                <mat-card-title class="roster-title">Team Stats</mat-card-title>
               </mat-card-content>
             </mat-card>
           </div>
         </div>
+        <mat-card class="border">
+          <mat-card-title
+            class="roster-title"
+            [matTooltip]="getTooltip('roster')"
+            >NHL Roster</mat-card-title
+          >
+          <div class="roster-container">
+            <div class="roster-left row">
+              <ng-container *ngIf="forwards">
+                <mat-card-title class="position-name">
+                  Forwards ({{ forwards.length }})
+                </mat-card-title>
+                <ng-container *ngFor="let forward of forwards">
+                  <a
+                    [routerLink]="['/', forward.playerId, 'year', '2024']"
+                    class="plain-link"
+                  >
+                    #{{ forward.sweaterNumber }} {{ forward.fullName }} -
+                    {{ forward.positionCode }}
+                  </a>
+                </ng-container>
+              </ng-container>
+            </div>
+            <div class="roster-right row">
+              <ng-container *ngIf="defense">
+                <mat-card-title class="position-name">
+                  Defense ({{ defense.length }})
+                </mat-card-title>
+                <ng-container *ngFor="let defenseman of defense">
+                  <!-- I don't think I like the position being hand + D -->
+                  <!-- Also, I thought that player pages without a year should default to current but it doesn't -->
+                  <a
+                    [routerLink]="['/', defenseman.playerId, 'year', 2024]"
+                    class="plain-link"
+                  >
+                    #{{ defenseman.sweaterNumber }} {{ defenseman.fullName }} -
+                    {{ defenseman.shootsCatches }}{{ defenseman.positionCode }}
+                  </a>
+                </ng-container>
+              </ng-container>
+              <hr class="divide-line" />
+              <ng-container *ngIf="goalies">
+                <mat-card-title class="position-name">
+                  Goalies ({{ goalies.length }})
+                </mat-card-title>
+                <ng-container *ngFor="let goalie of goalies">
+                  <a
+                    [routerLink]="['/', goalie.playerId, 'year', 2024]"
+                    class="plain-link"
+                  >
+                    #{{ goalie.sweaterNumber }} {{ goalie.fullName }} -
+                    {{ goalie.shootsCatches }}
+                  </a>
+                </ng-container>
+              </ng-container>
+            </div>
+          </div>
+        </mat-card>
       </ng-container>
     </div>
   </div>
