--- a/src/app/teams/teams.component.scss
+++ b/src/app/teams/teams.component.scss
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 .plain-link {
   color: inherit; /* Inherit the color from the parent */
   text-decoration: none; /* Remove underline */
@@ -23,10 +16,10 @@
   margin-bottom: 2px 0;
 }
 
-.roster-title  {
-    text-align: center;
-    font-size: 20px;
-  }
+.roster-title {
+  text-align: center;
+  font-size: 20px;
+}
 
 .divide-line {
   border: 1px solid #a7a5a5;
@@ -35,9 +28,10 @@
 }
 
 .divide-line-roster {
-    border: 1px solid #a7a5a5;
-    margin: 8px 0;
-  }
+  border: 1px solid #a7a5a5;
+  margin: 4px 0;
+  width: 100%;
+}
 
 .team-info-title {
   font-size: 15px;
@@ -66,18 +60,18 @@
 }
 
 .roster-left {
-    flex: 1;
-    width: 300px;
-    align-items: center;
-    margin: 15px;
+  flex: 1;
+  width: 300px;
+  align-items: center;
+  margin: 15px;
 }
 
 .roster-right {
-    flex: 1;
-    margin: 15px;
-    width: 300px;
-    align-items: center;
-    justify-content: start;
+  flex: 1;
+  margin: 15px;
+  width: 300px;
+  align-items: center;
+  justify-content: start;
 }
 
 .team-logo {
@@ -85,28 +79,28 @@
   height: auto;
 }
 
-html, body {
-    margin: 0;
-    padding: 0;
-    min-height: 150vh;
-}
-
 @media only screen and (max-width: 1000px) {
-    .team-logo {
-        width: 200px;
-    }
-
-    .roster-container {
-      flex-direction: column; /* Change flex direction to column for stacking on mobile */
-        width: 100%;
-        text-align: center;
-    }
-
-    .roster-left {
-        width: 100%;
-    }
-
-    .roster-right {
-        width: 100%;
-    }
+  .team-logo {
+    width: 200px;
   }
+
+  .roster-container {
+    flex-direction: column; /* Change flex direction to column for stacking on mobile */
+    width: 100%;
+    text-align: center;
+  }
+
+  .divide-line-roster {
+    border: 1px solid #a7a5a5;
+    margin: 8px 0;
+    width: 100%;
+  }
+
+  .roster-left {
+    width: 100%;
+  }
+
+  .roster-right {
+    width: 100%;
+  }
+}
