--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   class="navbar navbar-expand-lg navbar-dark bg-dark d-flex align-items-center"
   [style.background-color]="navColor + ' !important'"
 >
-  <div class="container-fluid">
+  <div class="container-fluid" style=" overflow: hidden;">
     <a [routerLink]="['']">
       <img src="assets/logo.JPEG" class="main-logo" />
     </a>
@@ -40,9 +40,9 @@
       </div>
     </div>
 
-    <!-- Buttons for desktop layout (FIX THE RIGHT SHIFT OF THE BUTTONS) -->
-    <div class="d-none d-lg-flex">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <!-- Buttons for desktop layout -->
+    <div class="d-none d-lg-flex me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav">
         <li class="nav-item">
           <button
             type="button"
@@ -90,9 +90,9 @@
         </li>
       </ul>
     </div>
-    <div class="position-relative row mt-auto">
-      <div class="col-md-4">
-        <div class="search-and-select">
+    <div class="row">
+      <div class="col-6 col-md-4">
+        <div class="search-and-select search-select-height">
           <!-- Replace mat-form-field with a regular select element -->
           <select class="form-select year-select" (change)="selectYear($event)">
             <option value="null">Year</option>
@@ -105,36 +105,36 @@
             <option value="2024">2024</option>
           </select>
         </div>
-      </div>
-      <div class="col-md-8">
-        <input
-          type="search"
-          class="form-control"
-          placeholder="Search Player Name"
-          [formControl]="searchControl"
-          (input)="onSearchInputChange()"
-        />
-        <div
-          class="dropdown-menu dropdown-menu-right"
-          aria-labelledby="dropdownMenuButton"
-          *ngIf="searchControl.value && filteredPlayers.length > 0"
-        >
-          <a
-            class="dropdown-item"
-            href="#"
-            *ngFor="let player of filteredPlayers | slice : 0 : 7"
-            [routerLink]="['/', player.playerID, 'year', year]"
-            (click)="clearSearchInput()"
+        </div>
+        <div class="col-6 col-md-8 search-and-select">
+          <input
+            type="search"
+            class="form-control search-select-height"
+            placeholder="Search Player Name"
+            [formControl]="searchControl"
+            (input)="onSearchInputChange()"
+          />
+          <div
+            class="dropdown-menu dropdown-menu-right"
+            aria-labelledby="dropdownMenuButton"
+            *ngIf="searchControl.value && filteredPlayers.length > 0"
           >
-            <img
-              src="{{
-                'https://assets.nhle.com/mugs/nhl/latest/' +
-                  player.playerID +
-                  '.png'
-              }}"
-              class="logo"
-            />{{ player.firstName }} {{ player.lastName }}
-          </a>
+            <a
+              class="dropdown-item"
+              href="#"
+              *ngFor="let player of filteredPlayers | slice : 0 : 7"
+              [routerLink]="['/', player.playerID, 'year', year]"
+              (click)="clearSearchInput()"
+            >
+              <img
+                src="{{
+                  'https://assets.nhle.com/mugs/nhl/latest/' +
+                    player.playerID +
+                    '.png'
+                }}"
+                class="logo"
+              />{{ player.firstName }} {{ player.lastName }}
+            </a>
         </div>
       </div>
     </div>
